Start migration to Bootstrap and Sass